--- a/BedrockBoot/Controls/ContentDialogContent/ImportModPackContent.xaml
+++ b/BedrockBoot/Controls/ContentDialogContent/ImportModPackContent.xaml
@@ -1,6 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Page
-    x:Class="BedrockBoot.Controls.ContentDialogContent.ImportPackContent"
+    x:Class="BedrockBoot.Controls.ContentDialogContent.ImportModPackContent"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:BedrockBoot.Controls.ContentDialogContent"
@@ -26,7 +26,6 @@
                   x:Name="PackType_Box"
                   SelectedIndex="0"
                   Header="包类型">
-            <ComboBoxItem>资源包</ComboBoxItem>
             <ComboBoxItem>普通 Mod</ComboBoxItem>
             <ComboBoxItem>延迟加载 Mod</ComboBoxItem>
         </ComboBox>
