--- a/BedrockBoot/Pages/ManagerPages/ManagerWorldsPage.xaml
+++ b/BedrockBoot/Pages/ManagerPages/ManagerWorldsPage.xaml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Page
-    x:Class="BedrockBoot.Pages.SettingPage.BehaviorPage"
+    x:Class="BedrockBoot.Pages.ManagerPages.ManagerWorldsPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:BedrockBoot.Pages.SettingPage"
+    xmlns:local="using:BedrockBoot.Pages.ManagerPages"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
