--- a/BedrockBoot/Pages/SettingsPage.xaml
+++ b/BedrockBoot/Pages/SettingsPage.xaml
@@ -106,7 +106,12 @@
 
                             <dev:SettingsCard Header="操作">
                                 <StackPanel Orientation="Horizontal">
-                                    <Button Width="120" Margin="0,0,5,0">删除所选目录</Button>
+                                    <Button
+                                        Width="120"
+                                        Margin="0,0,5,0"
+                                        Style="{ThemeResource WarnButtonStyle}">
+                                        删除所选目录
+                                    </Button>
                                     <Button
                                         Name="ImportGameFolder"
                                         Width="270"
